# aoc-mmmod

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  api.h  hook.c  hook.h  main.c  mmmod.h  readme.md  strings.rc
.github/workflows/: ci.yml
